<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/news_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/layout_margin_16"
    android:orientation="vertical">

    <TextView
        android:textAppearance="@style/TextAppearance.Journal.Title1"
        android:id="@+id/main_news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/title_example"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:textAppearance="@style/TextAppearance.Journal.Body"
        android:id="@+id/main_news_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/subtitle_example"
        app:layout_constraintTop_toBottomOf="@+id/main_news_title"/>

    <ImageView
        android:id="@+id/main_news_photo"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@null"
        app:layout_constraintTop_toBottomOf="@id/main_news_subtitle"
        app:layout_constraintDimensionRatio="H,1:1"
        tools:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/main_news_photo_reference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/references_example"
        app:layout_constraintTop_toBottomOf="@id/main_news_photo"/>

</androidx.constraintlayout.widget.ConstraintLayout>