<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/news_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/simple_news_category"
        android:textAppearance="@style/TextAppearance.Journal.Micro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/layout_margin_24"
        android:layout_marginStart="@dimen/layout_margin_16"
        android:layout_marginEnd="@dimen/layout_margin_16"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Cultura"/>

    <TextView
        android:textAppearance="@style/TextAppearance.Journal.Title3"
        android:id="@+id/simple_news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layout_marginTop="@dimen/layout_margin_8"
        android:layout_marginStart="@dimen/layout_margin_16"
        android:layout_marginEnd="@dimen/layout_margin_16"
        app:layout_constraintTop_toBottomOf="@id/simple_news_category"
        tools:text="@string/title_example"/>

    <TextView
        android:textAppearance="@style/TextAppearance.Journal.BodySmall"
        android:id="@+id/simple_news_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_8"
        android:layout_marginStart="@dimen/layout_margin_16"
        android:layout_marginEnd="@dimen/layout_margin_16"
        android:maxLines="3"
        android:ellipsize="end"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/simple_news_title"
        tools:text="@string/subtitle_example"/>

    <ImageView
        android:id="@+id/simple_news_photo"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/layout_margin_16"
        android:layout_marginEnd="@dimen/layout_margin_16"
        android:contentDescription="@null"
        android:layout_marginTop="@dimen/layout_margin_8"
        app:layout_constraintTop_toBottomOf="@id/simple_news_subtitle"
        app:layout_constraintDimensionRatio="H,19:9"
        tools:src="@mipmap/ic_launcher"/>

    <TextView
        android:textAppearance="@style/TextAppearance.Journal.Micro"
        android:id="@+id/simple_news_photo_reference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_16"
        android:layout_marginEnd="@dimen/layout_margin_16"
        android:textAlignment="textEnd"
        app:layout_constraintTop_toBottomOf="@id/simple_news_photo"
        tools:text="@string/references_example" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="?attr/colorPrimary"
        android:layout_marginTop="@dimen/layout_margin_24"
        android:layout_marginStart="@dimen/layout_margin_16"
        android:layout_marginEnd="@dimen/layout_margin_16"
        app:layout_constraintTop_toBottomOf="@id/simple_news_photo_reference"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>